# jira-progress-reporter

./: .env.example  .gitignore  INSTALL.md  LICENSE  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  claude-skill.md  cursorrules.md  jira-progress.skill  pyproject.toml
examples/: 2026-03-13_rhaistrat_26.md  2026-03-13_rhaistrat_26.pptx
src/jira_progress/: __init__.py  __main__.py  client.py  pipeline.py  prompts.py  slides.py
src/jira_progress/config/: brand.json
