[project]
name = "jira-progress-reporter"
version = "0.1.0"
description = "Generate Jira Outcome/Feature progress reports with dependency graphs and PowerPoint slides"
readme = "README.md"
authors = [
    { name = "Jenny Yang Yi", email = "yyi@redhat.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-ai>=1.67.0",
    "python-pptx>=0.6.0",
]

[project.scripts]
jira-progress = "jira_progress.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
